--- a/Styles.css
+++ b/Styles.css
@@ -3,17 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+.layout{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
 header {
     background-color: #333;
     color: white;
-    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 10vh;
 }
-
 header nav {
     display: flex;
 }
@@ -23,23 +26,119 @@ header nav a {
     text-decoration: none;
     padding: 0 10px;
 }
-
-
 main {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
+    flex-grow: 1;
+    background-color: aquamarine;
+    
 }
 
 footer {
-    background-color: #333;
+    background-color: #21cc4c;
     color: white;
-    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 10vh;
 }
+.logo{
+    height: 10vh;
+    width: 30vw;
+}
+.text{
+    font-size: 2rem;
+    margin-right: 20px;
+}
+.social{
+    margin-left: 20px;
+}
+.carousel-container {
+    min-height: 10vh;
+    width: 100%;
+}
 
+.carousel {
+    display: flex;
+    width: 33%;
+    max-height: 20vh;
+}
+
+.carousel img {
+    width: 100%;
+    height: auto;
+}
+.filter-search {
+    min-height: 10vh;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 20px 0;
+}
+.filters {
+    display: flex;
+    gap: 10px;
+}
+.search-bar input {
+    padding: 5px;
+    font-size: 16px;
+    width: 200px;
+}
+.items-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.item {
+    flex: 1 1 calc(25% - 20px);
+    background-color: #af9cc5;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.item img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.item h3 {
+    margin: 10px 0;
+}
+
+.item p {
+    margin: 10px 0;
+}
+
+.item .details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.item .details a {
+    text-decoration: none;
+    color: blue;
+    font-weight: bold;
+}
+@media (max-width: 768px) {
+    .item {
+        flex: 1 1 calc(50% - 20px);
+    }
+
+    .filter-search {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .search-bar input {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .item {
+        flex: 1 1 100%;
+    }
+}
