--- a/Styles.css
+++ b/Styles.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     min-height: 10vh;
 }
 header nav {
@@ -28,6 +29,8 @@ header nav a {
 }
 main {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     background-color: aquamarine;
     
 }
@@ -40,6 +43,10 @@ footer {
     align-items: center;
     min-height: 10vh;
 }
+h1{
+    text-align: center;
+    font-size: 2rem;
+}
 .logo{
     height: 10vh;
     width: 30vw;
@@ -49,6 +56,9 @@ footer {
     margin-right: 20px;
 }
 .social{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
     margin-left: 20px;
 }
 .carousel-container {
@@ -57,14 +67,14 @@ footer {
 }
 
 .carousel {
+    
     display: flex;
-    width: 33%;
+    width: 33.33%;
     max-height: 20vh;
 }
 
 .carousel img {
     width: 100%;
-    height: auto;
 }
 .filter-search {
     min-height: 10vh;
@@ -77,6 +87,7 @@ footer {
 .filters {
     display: flex;
     gap: 10px;
+    flex-wrap: wrap;
 }
 .search-bar input {
     padding: 5px;
@@ -121,6 +132,51 @@ footer {
     text-decoration: none;
     color: blue;
     font-weight: bold;
+}
+.form-container {
+    margin-top: 2%;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    align-self: center;
+
+}
+
+.form-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container form label {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.form-container form input,
+.form-container form textarea {
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    width: 100%;
+}
+
+.form-container form button {
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.form-container form button:hover {
+    background-color: #555;
 }
 @media (max-width: 768px) {
     .item {
